--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,118 +1,117 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-    color: #333;
-  }
-  
-  .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0px 20px;
-  }
-  
-  h1 {
-    font-size: 2rem;
-    color: #444;
-  }
-  
-  p {
-    margin: 10px 0;
-  }
-  
-  nav {
-    margin-top: 20px;
-  }
-  
-  .btn {
-    display: inline-block;
-    margin: 10px;
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-  }
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #242424;
+  color: #c9c9c9;
+}
 
-  .btn-back {
-    display: inline-block;
-    margin: 10px;
-    padding: 6px 16px;
-    background-color: transparent;
-    color: #03dac6;
-    border: 1px solid #03dac6;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: all 0.3s ease;
-  }
-  
-  .btn:hover {
-    background-color: #0056b3;
-    transform: translateY(-2px);
-  }
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0px 20px;
+}
 
-  .btn-back:hover {
-    background-color: #001b3756;
-    transform: translateY(-2px);
-  }
+h1 {
+  font-size: 2.5rem;
+  color: #bb86fc;
+  margin-bottom: 0.5rem;
+}
 
-  .group-link {
-    color: #e0e0e0;
-    text-decoration: none;
-    background-color: #bb86fc;
-    padding: 0.5rem 1rem;
-    margin: 10px;
-    border-radius: 5px;
-    transition: all 0.2s ease;
-  }
-  
-  .group-link:hover {
-    background-color: rgba(187, 134, 252, 0.1);
-    color: #bb86fc;
-  }
+h2 {
+  color: #03dac6;
+}
 
-  .content {
-    padding: 20px;
-    background-color: #1e1e1e;
-    margin-top: 20px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  }
-  
-  .top-bar {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding: 15px;
-  }
+p {
+  margin: 10px 0;
+  line-height: 1.5;
+}
 
-  .sign-in {
-    font-size: 1rem;
-    padding: 8px 16px;
-    background-color: #28a745;
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-  }
-  
-  li {
-    background-color: #2d2d2d;
-    padding: 12px 16px;
-    transition: background-color 0.2s;
-    border-radius: 4px;
-  }
-  
-  li:hover {
-    background-color: #3d3d3d;
-  }
+/* Button */
+.btn {
+  display: inline-block;
+  margin: 10px;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
 
-  .form-group input {
-    width: 15%;
-    padding: 10px 12px;
-    margin: 20px;
-    font-size: 1rem;
-    background-color: #1e1e1e;
-    border: 2px solid #3d3d3d;
-    border-radius: 4px;
-    color: #e0e0e0;
-  }
+.btn-back {
+  display: inline-block;
+  margin: 10px;
+  padding: 6px 16px;
+  background-color: transparent;
+  color: #03dac6;
+  border: 1px solid #03dac6;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+
+.btn:hover {
+  background-color: #0056b3;
+  transform: translateY(-2px);
+}
+
+.btn-back:hover {
+  background-color: #001b3756;
+  transform: translateY(-2px);
+}
+
+.group-link {
+  color: #e0e0e0;
+  text-decoration: none;
+  background-color: #bb86fc;
+  padding: 0.5rem 1rem;
+  margin: 10px;
+  border-radius: 5px;
+  transition: all 0.2s ease;
+}
+
+.group-link:hover {
+  background-color: rgba(187, 134, 252, 0.1);
+  color: #bb86fc;
+}
+
+.content {
+  padding: 20px;
+  background-color: #1e1e1e;
+  margin-top: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.app-container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  background-color: #2d2d2d;
+  padding: 12px 16px;
+  transition: background-color 0.2s;
+  border-radius: 4px;
+}
+
+li:hover {
+  background-color: #3d3d3d;
+}
+
+.form-group input {
+  width: 15%;
+  padding: 10px 12px;
+  margin: 20px;
+  font-size: 1rem;
+  background-color: #1e1e1e;
+  border: 2px solid #3d3d3d;
+  border-radius: 4px;
+  color: #e0e0e0;
+}
